Sun, 02 Jun 2013 01:08:26 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.52 release.

   *  Changing check_keys to use re.match() instead of str.translate(),
      because re.match() works with Python < 2.6.
      Found by Giovanni Di Milia.

Mon, 06 May 2013 15:29:07 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.51 release.

   *  Add a MANIFEST.in file, patch by Daniel Widerin.

Mon, 06 May 2013 07:20:21 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.50 release.

   *  Client() now takes a "check_keys" option, which defaults to True.
      If False, it disables the checking of keys to ensure they have
      acceptable size and are composed of non-control characters.
      Suggested by Ben Hoyt.

   *  Converting control character checking of keys based on performance
      testing of alternatives by Ben Hoyt.

   *  Converted unicode tests from using u'', patch from Eren Güve.

   *  Included license file (pull request by "Philippe" pombredanne).

   *  Doing a "set" after server goes away, raised AttributeError:
      'NoneType' object has no attribute 'sendall'.  Patch by Ken Lalonde

   *  incr/decr return None instead of 0 on server connection failure.
      Suggested by Ivan Virabyan

   *  Supports IPv6 connections using: "inet6:[fd00::32:19f7]:11000".
      Patch by Romain Courteaud

   *  Switching over to github for this project:

         https://github.com/linsomniac

   * Bug #974632: _ConnectionDeadError sometimes was escaping the get/set
   code.  This should return to readline() not raising an exception, except
   in the case that it's called from the get/set().  Report from Gary
   Poster, proposed patch by Brad Crittenden.

   Misc fixes by Brad Crittenden: fixing a docstring, if "port" is set to
   any false-like value it will default to 11211.

Mon, 29 Nov 2011 12:37:32 -0700  Sean Reifschneider  <jafo@tummy.com>

   * Bug #887765: Interrupted connection to memcache server can cause
   inconsistencies.